# telegraph-bot

./: .gitignore  Cargo.toml  README.md  composer.json  core.min.js  db_export.csv  index.php  publication.csv  telegra_bot
data/: articles.csv
database/: database.db  database.sqlite
rust/telegra_bot/: Cargo.toml
rust/telegra_bot/src/: main.rs
src/: main.rs  model.rs  repository.rs  service.rs
src/Contract/: ArticleContract.php
src/Database/: DB.php
src/Domain/: Article.php
src/Entity/: Article.php
src/Repository/: ArticleRepository.php  CSVRepository.php  PublicationRepository.php
src/Service/: CSVService.php  TelegraphService.php
src/Utils/: Path.php  URL.php
