[package]
name = "telegra_bot"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"      # Оптимізація за розміром (можна спробувати "s")
lto = true           # Link Time Optimization (видаляє невикористаний код між крейтами)
codegen-units = 1    # Зменшує паралелізм при збірці, але краще оптимізує
panic = "abort"      # Видаляє механізм розкручування стека (зменшує розмір на ~10-15%)
strip = true         # Автоматично видаляє символи налагодження (debug symbols)

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
#sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
# Якщо буде помилка "sqlite not found", змініть на:
# sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"], default-features = false }
thirtyfour = "0.36.1"
tokio = { version = "1.50.0", features = ["full"] }
