[package]
name = "telegra_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
thirtyfour = "0.36.1"
tokio = { version = "1.50.0", features = ["full"] }
